[gd_scene load_steps=8 format=3 uid="uid://dqs83jfyuvrkd"]

[ext_resource type="Script" path="res://scripts/test.gd" id="1_miv5m"]
[ext_resource type="PackedScene" uid="uid://fgx3msmlceof" path="res://scenes/clock.tscn" id="2_tn51q"]
[ext_resource type="Script" path="res://scripts/Characterbody2d.gd" id="3_6u2jl"]
[ext_resource type="Texture2D" uid="uid://cwecpagbp2wsq" path="res://icon.svg" id="4_iewaa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rm47"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l22r"]
size = Vector2(1632, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sqph"]
size = Vector2(192, 800)

[node name="Test" type="Node2D"]
script = ExtResource("1_miv5m")

[node name="Clock" parent="." instance=ExtResource("2_tn51q")]
offset_left = 288.0
offset_top = 224.0
offset_right = 1632.0
offset_bottom = 864.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(928, 864)
script = ExtResource("3_6u2jl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_6rm47")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("4_iewaa")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(480, 1120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(448, -64)
shape = SubResource("RectangleShape2D_4l22r")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(480, 1120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-480, -448)
shape = SubResource("RectangleShape2D_1sqph")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(480, 1120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1376, -448)
shape = SubResource("RectangleShape2D_1sqph")

[connection signal="alarm_created" from="Clock" to="." method="_on_clock_alarm_created"]
[connection signal="event_created" from="Clock" to="." method="_on_clock_event_created"]
[connection signal="finished" from="Clock" to="." method="_on_clock_finished"]
[connection signal="stopped" from="Clock" to="." method="_on_clock_stopped"]
